gccida/c3/try_combine
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_combine/src/combine.c:1992:4: error: expected ';' after expression
rtx v29; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_combine/src/combine.c:1992:5: error: use of undeclared identifier 'v29'
rtx v29; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_combine/src/combine.c:1994:4: error: expected ';' after expression
rtx v31; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_combine/src/combine.c:1994:5: error: use of undeclared identifier 'v31'
rtx v31; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_combine/src/combine.c:2001:4: error: expected ';' after expression
rtx v38; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_combine/src/combine.c:2001:5: error: use of undeclared identifier 'v38'
rtx v38; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_combine/src/combine.c:2016:6: error: use of undeclared identifier 'v53'
rtx *v53; // r9 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_combine/src/combine.c:2030:4: error: expected ';' after expression
rtx v67; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_combine/src/combine.c:2030:5: error: use of undeclared identifier 'v67'
rtx v67; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_combine/src/combine.c:2037:4: error: expected ';' after expression
rtx v74; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_combine/src/combine.c:2037:5: error: use of undeclared identifier 'v74'
rtx v74; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_combine/src/combine.c:2040:4: error: expected ';' after expression
rtx v77; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_combine/src/combine.c:2040:5: error: use of undeclared identifier 'v77'
rtx v77; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_combine/src/combine.c:2042:4: error: expected ';' after expression
rtx v79; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_combine/src/combine.c:2042:5: error: use of undeclared identifier 'v79'
rtx v79; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_combine/src/combine.c:2045:4: error: expected ';' after expression
rtx v82; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_combine/src/combine.c:2045:5: error: use of undeclared identifier 'v82'
rtx v82; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_combine/src/combine.c:2049:4: error: expected ';' after expression
rtx v86; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_combine/src/combine.c:2049:5: error: use of undeclared identifier 'v86'
rtx v86; // rbx 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_combine/src/obj/combine.o] Error 1
